   
===========
Changes log  
===========

- @version-full@ (@release-date@)

- 2.0 Milestone 6 (2009-11-20)
    - API changes
        - Renamed ChallengeScheme#HTTP_MS_SHAREDKEY into 
          HTTP_AZURE_SHAREDKEY and HTTP_MS_SHAREDKEY_LITE into 
          HTTP_AZURE_SHAREDKEY_LITE.
        - DataServices.Session#getMetadata() now returns on Object 
          to prevent link to internal class.
        - Upgraded the "org.restlet.ext.httpclient" extension to
          leverage Apache HTTP Client 4.0. WARNING: some parameters 
          were renamed due to API changes.
        - Refactored for simplification the security API introduced 
          in previous Restlet 2.0 milestones. 
           - The Organization class was removed and its "rootGroups" 
             and "users" properties were moved to MemoryRealm.
           - The Permission class was removed as it isn't necessarily
             the best way to enforce fine grained authorization. 
           - The RealmService class was removed and the "realms" 
             property moved to Component.
           - The ClientInfo#subject property was replaced by 
             "user : User", "roles : List<Role>" and "principals" to 
             remove the JAAS dependency.
           - A new JAAS extension was added, where the JaasVerifier, 
             DefaultCallbackHandler, UserPrincipal and RolePrincipal
             classes where moved.
           - Verifier now uses ClientInfo as parameter instead of
             Subject.
           - Added a "name" property to Realm and a findRealm(name)
             to Component.
           - Added JaasUtils class with a createSubject(ClientInfo)
             static method. Suggested by Rickard Oberg.
           - Enroler and Verifier are now interfaces.
             Suggested by Rickard Oberg.
           - Added new Digest#ALGORITHM_HTTP_DIGEST constant for A1 
             field as specified in RFC 2617.
           - Renamed HttpDigestAuthenticator into a more generic 